# foam2mtx

./: .gitignore  Makefile  README.md
script/: mtx.py  spy.py  tutorial.py
src/: CMakeLists.txt  solverHook.C  solverHook.H
src/Make/: files  options
test/elbow.in/: Allclean  Allrun
test/elbow.in/0/: U  p
test/elbow.in/constant/: transportProperties
test/elbow.in/system/: controlDict  foamDataToFluentDict  fvSchemes  fvSolution
test/elbow.out/mtx/Uy/: 0
test/elbow.out/mtx/p/: 0
